2009-03-25  Les Harris  <lharris@gnome.org>

	* src/mud-window-prefs.[ch]: New files which implement the new
	preference dialog.

2009-03-25  Les Harris  <lharris@gnome.org>

	* configure.ac: Patch from Sean Middleditch. Added AM_PROG_CC_C_0
	* src/Makefile.am: Patch from Sean Middleditch. Added ecma48.h.
	Also removed mud-preferences-window.[ch] and added mud-trigger.[ch]
	Added -g -Wall -O0 for debugging.
	* src/mud-trigger.[ch]: New files which will implement the new
	triggers.
	* src/handlers/Makefile.am: Added -g -Wall -O0 for debugging.
	* src/zmp/Makefile.am: Added -g -Wall -O0 for debugging.
	* src/mud-preferences-window.[ch]: Toasted.
	* src/debug-logger.c (debug_logger_insert_handler),
	(debug_logger_get_handler_by_name):
	* src/gnome-mud.c (main):
	* src/handlers/mud-telnet-charset.c:
	* src/handlers/mud-telnet-echo.c:
	* src/handlers/mud-telnet-eor.c:
	* src/handlers/mud-telnet-mccp.c (mud_mccp_decompress):
	* src/handlers/mud-telnet-msp.c (mud_telnet_msp_parse),
	(mud_telnet_msp_get_files):
	* src/handlers/mud-telnet-mssp.c (mud_telnet_mssp_handle_sub_neg):
	* src/handlers/mud-telnet-naws.c (mud_telnet_naws_finalize),
	(mud_telnet_naws_disable):
	* src/handlers/mud-telnet-new-environ.c
	(mud_telnet_newenviron_handle_sub_neg):
	* src/handlers/mud-telnet-ttype.c:
	* src/handlers/mud-telnet-zmp.c (mud_telnet_zmp_handle_sub_neg),
	(mud_zmp_get_function), (mud_zmp_has_package):
	* src/mud-connection-view.c (choose_profile_callback),
	(mud_connection_view_network_event_cb), (mud_connection_view_send):
	* src/mud-connections.c (mud_connections_constructor),
	(mud_connections_compare_func), (mud_connections_delete_cb):
	* src/mud-log.c (mud_log_constructor), (mud_log_select_clicked_cb),
	(mud_log_open), (mud_log_close), (mud_log_write),
	(mud_log_parse_ecma_color):
	* src/mud-parse-alias.c (mud_parse_alias_do):
	* src/mud-parse-base.c:
	* src/mud-parse-trigger.c (mud_parse_trigger_do):
	* src/mud-profile-manager.c (mud_profile_manager_delete_profile),